# grayscott

./: CMakeLists.txt  README.md
profiling/: cache.sh  perfstat
result/: CMakeCache.txt  output_step_0.txt  output_step_1000.txt  output_step_2000.txt  output_step_3000.txt  output_step_4000.txt  output_step_5000.txt  output_step_6000.txt  output_step_7000.txt  output_step_8000.txt  output_step_9000.txt
src/: main.cpp
src/python/: pillow.py
